<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/vendor_home" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/vendor_profile" />

        <item
            android:id="@+id/nav_wallet"
            android:title="@string/vendor_wallet" />
        <item
            android:id="@+id/nav_history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_setting"
            android:title="@string/vendor_setting" />
        <item
            android:id="@+id/nav_notify"
            android:title="@string/vendor_notify" />
        <item
            android:id="@+id/nav_aboutUs"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_contactUs"
            android:title="@string/contact" />

        <item
            android:id="@+id/nav_logOut"
            android:title="@string/logout" />

    </group>


</menu>