<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Transaction_History_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/page_bg"
    tools:context=".activity.WalletActivty">

     <LinearLayout
         android:id="@+id/linear_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:title="@string/Wallet"
             android:background="@color/color_red"
             app:titleTextColor="@color/black"/>

<!--    <include android:id="@+id/toolbar"-->
<!--        layout="@layout/toolbar2" />-->


    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:weightSum="0.40"
        android:background="@color/light_colorAccent"
        android:layout_height="180dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:elevation="@dimen/_2sdp"
        android:translationZ="@dimen/_2sdp">


        <com.foodforme.vendore.customwidget.CustomTextView
            android:id="@+id/wallet_balance_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Wallet_balance"
            app:fontAssetName="@string/font_light_regular"
            android:textSize="@dimen/_30sdp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/right_back"/>



        <com.foodforme.vendore.customwidget.CustomTextView
            android:id="@+id/wallet_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NIS 78"
           app:fontAssetName="@string/font_medium"
            android:textSize="@dimen/_45sdp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/wallet_balance_txt"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/right_back"/>


    </RelativeLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_below="@+id/layout1"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_marginLeft="@dimen/_10sdp"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginRight="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp"
             android:layout_marginBottom="@dimen/_10sdp"
             android:background="@drawable/rectangle_bg"
             android:elevation="@dimen/_2sdp"
             android:translationZ="@dimen/_2sdp">


             <RelativeLayout
                 android:id="@+id/send_wallet_bal"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_50sdp">

                 <com.foodforme.vendore.customwidget.CustomTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/_10sdp"
                     android:text="@string/add_money_to_wallet"
                     app:fontAssetName="@string/font_regular"
                     android:textSize="@dimen/_12sdp"
                     android:textColor="@color/lightblack"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="@dimen/_10sdp" />


                 <ImageView
                     android:layout_width="@dimen/_15sdp"
                     android:layout_height="@dimen/_15sdp"
                     android:layout_gravity="center"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="@dimen/_10sdp"
                     android:layout_marginEnd="@dimen/_10sdp"
                     android:src="@drawable/right_back"/>


             </RelativeLayout>


             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
                 android:background="@android:color/darker_gray"/>


<!--
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_50sdp">

                 <com.foodforme.vendore.customwidget.CustomTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginLeft="@dimen/_10sdp"
                     android:src="@drawable/right_back"
                     android:text="@string/send_wallet_balance_to_bank"
                     android:textColor="@color/lightblack"
                     android:textSize="@dimen/_12sdp"
                     app:fontAssetName="@string/font_regular" />


                 <ImageView
                     android:layout_width="@dimen/_15sdp"
                     android:layout_height="@dimen/_15sdp"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center"
                     android:layout_marginEnd="@dimen/_10sdp"
                     android:layout_marginRight="@dimen/_10sdp"
                     android:src="@drawable/right_back" />


             </RelativeLayout>
-->

             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
                 android:background="@color/light_grey"/>



             <com.foodforme.vendore.customwidget.CustomTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:text="@string/transactionhistory"
                 app:fontAssetName="@string/font_medium"
                 android:textSize="@dimen/_14sdp"
                 android:textColor="@color/black"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:src="@drawable/right_back"/>


             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:layout_marginBottom="@dimen/_10sdp">

                 <androidx.core.widget.NestedScrollView
                     android:id="@+id/nestedScrollView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">

                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/transect_list"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">

                     </androidx.recyclerview.widget.RecyclerView>

                 </androidx.core.widget.NestedScrollView>
             </LinearLayout>

         </LinearLayout>


     </LinearLayout>





</RelativeLayout>